[package]
name = "jrsls"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "io-std",
  "io-util",
  "net",
] }
tower-lsp = "0.20.0"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
tree-sitter = "0.25.10"
tree-sitter-java = "0.23.5"
lazy_static = "1.5.0"
streaming-iterator = "0.1"
ropey = "1.6.1"
dashmap = "6.1.0"
